--- a/Image Slider/style.css
+++ b/Image Slider/style.css
@@ -14,7 +14,7 @@ a{
 
 /* Header section */
 header{
-    width: 1140px;
+    width: 90%;
     /* max-width: 80px; */
     margin: auto;
     height: 50px;
@@ -97,7 +97,7 @@ header nav a.active, header nav a:hover{
     border: none;
     background-color: #eee;
     padding: 7px 15px;
-    font-family: "Popins",sans-serif;
+    font-family: "Poppins",sans-serif;
     font-weight: 500;
     cursor: pointer;
     letter-spacing: 2px;
@@ -134,4 +134,171 @@ header nav a.active, header nav a:hover{
     object-fit: cover;
     border-radius: 20px;
     box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3) ;
+}
+
+/* nextprevArrow  Section*/
+.nextprevArrow {
+    position: absolute;
+    top: 80%;
+    right: 52%;
+    z-index: 100;
+    width: 300px;
+    /* max-width: 30%; */
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.nextprevArrow button{
+    width: 40px;
+    height: 40px;
+    background-color: #14ff72cd;
+    border-radius: 50%;
+    border: none;
+    color: #fff;
+    font-family: monospace;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.nextprevArrow button:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+/* Animation Part */
+
+.slider .list .item:nth-child(1){
+    z-index: 1;
+}
+
+.slider .list .item:nth-child(1) .content .title,
+.slider .list .item:nth-child(1) .content .type,
+.slider .list .item:nth-child(1) .content .description,
+.slider .list .item:nth-child(1) .content .button{
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent 0.5s 1s linear 1 forwards;
+}
+
+@keyframes showContent {
+    to{
+        transform: translateY(0);
+        filter: blur(0);
+        opacity: 1;
+    }
+}
+
+.slider .list .item:nth-child(1) .content .title{
+    animation-delay: 0.4s;
+}
+.slider .list .item:nth-child(1) .content .type{
+    animation-delay: 0.6s;
+}
+.slider .list .item:nth-child(1) .content .description{
+    animation-delay: 0.8s;
+}
+.slider .list .item:nth-child(1) .content .button{
+    animation-delay: 1s;
+}
+
+/* Animartion for next button click */
+
+.slider.next .list .item:nth-child(1) img{
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    border-radius: 30px;
+    animation: showImage 0.5s 1s linear 1 forwards;
+}
+
+@keyframes showImage{
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+.slider.next .thumbnail .item:nth-child(1){
+    overflow: hidden;
+    animation: showThumbnail 0.5s linear 1 forwards;
+}
+
+.slider.prev .list .item img{
+    z-index: 100;
+}
+ @keyframes showThumbnail{
+    from{
+        width: 0;
+        opacity: 0;
+    }
+ }
+
+ .slider.next .thumbnail{
+    animation: effectNext .5s linear 1 forwards;
+ }
+
+ @keyframes effectNext{
+    from{
+        transform: translateX(150px);
+    }
+ }
+
+/* Animation for prev button click */
+
+.slider.prev .list .item:nth-child(2){
+    z-index: 2;
+}
+.slider.prev .list .item:nth-child(2) img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    animation: outFrame 0.5s linear 1 forwards;
+}
+
+@keyframes outFrame {
+    to{
+        width: 150px;
+        height: 220px;
+        bottom: 50px;
+        left: 50%;
+        border-radius: 20px;
+    }
+}
+
+.slider.prev .thumbnail .item:nth-child(1){
+    overflow: hidden;
+    opacity: 0;
+    animation: showThumbnail 0.5s linear 1 forwards;
+}
+
+.slider.prev .list .item:nth-child(1) .content .type,
+.slider.prev .list .item:nth-child(1) .content .title,
+.slider.prev .list .item:nth-child(1) .content .description,
+.slider.prev .list .item:nth-child(1) .content .button{
+    animation: contentOut 0.5s 1s linear 1 forwards;
+}
+
+@keyframes contentOut{
+    to{
+        transform: translateY(-150px);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+
+@media screen and (max-width: 678px) {
+    .slider .list .item .content{
+        padding-right: 0;
+    }
+    
+    .slider .list .item .content .title{
+        font-size: 30px;
+    }
 }
