--- a/Image Slider/style.css
+++ b/Image Slider/style.css
@@ -1,21 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
-}
 body{
-    font-family: "Poppins",sans-serif;
+    margin: 0;
+    background-color: #000;
+    color: #eee;
+    font-family: Poppins;
+    font-size: 12px;
 }
+
 a{
     text-decoration: none;
 }
 
-/* Header section */
 header{
-    width: 90%;
-    /* max-width: 80px; */
+    width: 1140px;
+    max-width: 80%;
     margin: auto;
     height: 50px;
     display: flex;
@@ -24,30 +23,33 @@ header{
     z-index: 100;
 }
 
-header nav a{
+header a{
     color: #eee;
     margin-right: 5px;
     padding: 5px 10px;
-    font-family: "Poppins",sans-serif;
     transition: 0.2s;
-    font-size: 12px;
-    font-weight: 500;
 }
 
-header nav a.active, header nav a:hover{
-    background: #14ff72cd;
+a.active{
+    background: #14ff72cb;
     border-radius: 2px;
 }
 
-/* Slider Section */
-.slider{
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    position: relative;
-    margin-top: -50px;
+header a:hover{
+    background: #14ff72cb;
+    border-radius: 2px;
 }
 
+
+/* slider section  */
+
+.slider{
+    height: 100vh;
+    margin-top: -50px;
+    width: 100vw;
+    overflow: hidden;
+    position: relative;
+}
 .slider .list .item{
     width: 100%;
     height: 100%;
@@ -59,19 +61,17 @@ header nav a.active, header nav a:hover{
     height: 100%;
     object-fit: cover;
 }
-
 .slider .list .item .content{
     position: absolute;
     top: 20%;
     width: 1140px;
-    /* max-width: 80px; */
+    max-width: 80%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translateX(-50%);
     padding-right: 30%;
     box-sizing: border-box;
     color: #fff;
     text-shadow: 0 5px 10px #0004;
-
 }
 
 .slider .list .item .content .title,
@@ -80,45 +80,49 @@ header nav a.active, header nav a:hover{
     font-weight: bold;
     line-height: 1.3em;
 }
-
-.slider .list .item .content .type{
-    color: #14ff72cd;
+.slider .list .item .type{
+    color: #14ff72cb;
 }
-
-.slider .list .item .content .description{
-    font-size: 14px;
-}
-
-.slider .list .item .content .button{
+.slider .list .item .button{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    gap: 5px;
     margin-top: 20px;
 }
-
-.slider .list .item .content .button button{
+.slider .list .item .button button{
     border: none;
     background-color: #eee;
-    padding: 7px 15px;
-    font-family: "Poppins",sans-serif;
+    font-family: Poppins;
     font-weight: 500;
     cursor: pointer;
-    letter-spacing: 2px;
     transition: 0.4s;
+    letter-spacing: 2px;
 }
 
-.slider .list .item .content .button button:hover{
-    background-color: #14ff72cd;
+
+.slider .list .item .button button:hover{
+    letter-spacing: 3px;
+}
+.slider .list .item .button button:nth-child(2){
+    background-color: transparent;
+    border: 1px solid #fff;
     color: #eee;
 }
 
-/* Thumbnail Sections */
 
+
+
+
+/* Thumbnail Section  */
 .thumbnail{
-    display: flex;
-    gap: 20px;
     position: absolute;
     bottom: 50px;
     left: 50%;
     width: max-content;
     z-index: 100;
+    display: flex;
+    gap: 20px;
 }
 
 .thumbnail .item{
@@ -133,86 +137,88 @@ header nav a.active, header nav a:hover{
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
-    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3) ;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
 }
 
-/* nextprevArrow  Section*/
-.nextprevArrow {
+
+/* nextPrevArrows Section  */
+.nextPrevArrows{
     position: absolute;
     top: 80%;
     right: 52%;
     z-index: 100;
     width: 300px;
-    /* max-width: 30%; */
+    max-width: 30%;
     display: flex;
     gap: 10px;
     align-items: center;
 }
-
-.nextprevArrow button{
+.nextPrevArrows button{
     width: 40px;
     height: 40px;
-    background-color: #14ff72cd;
     border-radius: 50%;
+    background-color: #14ff72cb;
     border: none;
     color: #fff;
     font-family: monospace;
     font-weight: bold;
+    transition: .5s;
     cursor: pointer;
-    transition: 0.5s;
 }
-.nextprevArrow button:hover{
+.nextPrevArrows button:hover{
     background-color: #fff;
     color: #000;
 }
 
 /* Animation Part */
-
 .slider .list .item:nth-child(1){
     z-index: 1;
 }
 
+
+/* animation text in first item */
 .slider .list .item:nth-child(1) .content .title,
 .slider .list .item:nth-child(1) .content .type,
 .slider .list .item:nth-child(1) .content .description,
-.slider .list .item:nth-child(1) .content .button{
+.slider .list .item:nth-child(1) .content .buttons
+{
     transform: translateY(50px);
     filter: blur(20px);
     opacity: 0;
-    animation: showContent 0.5s 1s linear 1 forwards;
+    animation: showContent .5s 1s linear 1 forwards;
 }
-
-@keyframes showContent {
+@keyframes showContent{
     to{
-        transform: translateY(0);
-        filter: blur(0);
+        transform: translateY(0px);
+        filter: blur(0px);
         opacity: 1;
     }
 }
-
 .slider .list .item:nth-child(1) .content .title{
-    animation-delay: 0.4s;
+    animation-delay: 0.4s !important;
 }
 .slider .list .item:nth-child(1) .content .type{
-    animation-delay: 0.6s;
+    animation-delay: 0.6s !important;
 }
 .slider .list .item:nth-child(1) .content .description{
-    animation-delay: 0.8s;
+    animation-delay: 0.8s !important;
 }
-.slider .list .item:nth-child(1) .content .button{
-    animation-delay: 1s;
+.slider .list .item:nth-child(1) .content .buttons{
+    animation-delay: 1s !important;
 }
 
-/* Animartion for next button click */
 
+
+
+/* Animation for next button click */
 .slider.next .list .item:nth-child(1) img{
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 220px;
     position: absolute;
     bottom: 50px;
-    left: 50px;
+    left: 50%;
     border-radius: 30px;
-    animation: showImage 0.5s 1s linear 1 forwards;
+    animation: showImage .5s linear 1 forwards;
 }
 
 @keyframes showImage{
@@ -225,44 +231,47 @@ header nav a.active, header nav a:hover{
     }
 }
 
-.slider.next .thumbnail .item:nth-child(1){
+.slider.next .thumbnail .item:nth-last-child(1){
     overflow: hidden;
-    animation: showThumbnail 0.5s linear 1 forwards;
+    animation: showThumbnail .5s linear 1 forwards;
 }
-
 .slider.prev .list .item img{
     z-index: 100;
 }
- @keyframes showThumbnail{
+
+
+@keyframes showThumbnail{
     from{
         width: 0;
         opacity: 0;
     }
- }
+}
 
- .slider.next .thumbnail{
+
+.slider.next .thumbnail{
     animation: effectNext .5s linear 1 forwards;
- }
+}
 
- @keyframes effectNext{
+@keyframes effectNext{
     from{
         transform: translateX(150px);
     }
- }
+}
+
+
 
 /* Animation for prev button click */
-
 .slider.prev .list .item:nth-child(2){
     z-index: 2;
 }
+
 .slider.prev .list .item:nth-child(2) img{
+    animation: outFrame 0.5s linear 1 forwards;
     position: absolute;
     bottom: 0;
     left: 0;
-    animation: outFrame 0.5s linear 1 forwards;
 }
-
-@keyframes outFrame {
+@keyframes outFrame{
     to{
         width: 150px;
         height: 220px;
@@ -275,14 +284,20 @@ header nav a.active, header nav a:hover{
 .slider.prev .thumbnail .item:nth-child(1){
     overflow: hidden;
     opacity: 0;
-    animation: showThumbnail 0.5s linear 1 forwards;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.slider.next .nextPrevArrows button,
+.slider.prev .nextPrevArrows button{
+    pointer-events: none;
 }
 
-.slider.prev .list .item:nth-child(1) .content .type,
-.slider.prev .list .item:nth-child(1) .content .title,
-.slider.prev .list .item:nth-child(1) .content .description,
-.slider.prev .list .item:nth-child(1) .content .button{
-    animation: contentOut 0.5s 1s linear 1 forwards;
+
+.slider.prev .list .item:nth-child(2) .content .title,
+.slider.prev .list .item:nth-child(2) .content .type,
+.slider.prev .list .item:nth-child(2) .content .description,
+.slider.prev .list .item:nth-child(2) .content .buttons
+{
+    animation: contentOut 1.5s linear 1 forwards!important;
 }
 
 @keyframes contentOut{
@@ -292,13 +307,11 @@ header nav a.active, header nav a:hover{
         opacity: 0;
     }
 }
-
 @media screen and (max-width: 678px) {
     .slider .list .item .content{
         padding-right: 0;
     }
-    
     .slider .list .item .content .title{
-        font-size: 30px;
+        font-size: 50px;
     }
 }
